# python-vibrato

./: .readthedocs.yaml  Cargo.toml  README.md  noxfile.py  pyproject.toml  requirements-dev.txt  vibrato.pyi
.github/workflows/: CI.yml
docs/source/: api.rst  conf.py  examples.rst  index.rst
src/: lib.rs
tests/: test_vibrato.py
tests/data/: lex.csv  matrix.def  system.dic.zst  unk.def
