[package]
name = "python-vibrato"
version = "0.1.0"
edition = "2021"

[lib]
name = "vibrato"
crate-type = ["cdylib"]

[dependencies]
hashbrown = "0.13.1"
ouroboros = "0.15.5"
pyo3 = { version = "0.17.3", features = ["extension-module"] }
vibrato_rust = { package = "vibrato", git = "https://github.com/daac-tools/vibrato.git" }
