[package]
name = "python-vibrato"
version = "0.2.0"
edition = "2021"

[lib]
name = "vibrato"
crate-type = ["cdylib"]

[dependencies]
hashbrown = "0.13.1" # MIT or Apache-2.0
ouroboros = "0.15.6" # MIT or Apache-2.0
pyo3 = { version = "0.18.2", features = ["extension-module"] } # Apache-2.0
vibrato_rust = { package = "vibrato", version = "0.5.0", default-features = false } # MIT or Apache-2.0
