[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "vibrato"
dynamic = ["version"]
requires-python = ">=3.10"
description = "🎤 vibrato: VIterbi-Based acceleRAted TOkenizer"
readme = "README.md"
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Libraries",
  "Topic :: Text Processing",
]
